manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unstoppable-deployment
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unstoppable
  template:
    metadata:
      labels:
        app: unstoppable
    spec:
      containers:
      - name: unstoppable
        image: 6410l998.c1.gra9.container-registry.ovh.net/webapp/unstoppable:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ovh-webapp-registry
