manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unstoppable-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: unstoppable
  ports:
  - port: 80
    targetPort: 3000
