manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unstoppable-ingress
  namespace: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - unstoppable.astar.network
    secretName: astar-tls
  rules:
  - host: unstoppable.astar.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unstoppable-service
            port:
              number: 80
